@@ -17,14 +17,14 @@ jimport('joomla.application.categories');
 /**
  * Newsfeeds Component Route Helper
  *
- * @static
  * @package		Joomla
  * @subpackage	Newsfeeds
- * @since 1.5
+ * @since		1.5
  */
 abstract class NewsfeedsHelperRoute
 {
 	protected static $lookup;
+
 	/**
 	 * @param	int	The route of the newsfeed
 	 */
@@ -33,14 +33,15 @@ abstract class NewsfeedsHelperRoute
 		$needles = array(
 			'newsfeed'  => array((int) $id)
 		);
+
 		//Create the link
 		$link = 'index.php?option=com_newsfeeds&view=newsfeed&id='. $id;
-		if ($catid > 1)
-		{
+
+		if ((int)$catid > 1) {
 			$categories = JCategories::getInstance('Newsfeeds');
-			$category = $categories->get($catid);
-			if($category)
-			{
+			$category = $categories->get((int)$catid);
+
+			if ($category) {
 				//TODO Throw error that the category either not exists or is unpublished
 				$needles['category'] = array_reverse($category->getPath());
 				$needles['categories'] = $needles['category'];
@@ -57,15 +58,34 @@ abstract class NewsfeedsHelperRoute
 
 	public static function getCategoryRoute($catid)
 	{
-		$categories = JCategories::getInstance('Newsfeeds');
-		$category = $categories->get((int)$catid);
-		$catids = array_reverse($category->getPath());
+		if ((int) $catid < 1) {
+			return;
+		}
+
+		if ($catid instanceof JCategoryNode) {
+			$catids = array_reverse($catid->getPath());
+			$id = $catid->id;
+
+			// Create the link
+			$link = 'index.php?option=com_newsfeeds&view=category&id='.$id;
+		}
+		else {
+			$id = (int)$catid;
+			//Create the link
+			$link = 'index.php?option=com_newsfeeds&view=category&id='.$id;
+			$categories = JCategories::getInstance('Newsfeeds');
+			$category = $categories->get((int)$catid);
+
+			if (!$category) {
+				return $link;
+			}
+
+			$catids = array_reverse($category->getPath());
+		}
+
 		$needles = array(
-			'category' => $catids,
-			'categories' => $catids
+			'category' => $catids
 		);
-		//Create the link
-		$link = 'index.php?option=com_newsfeeds&view=category&id='.(int)$catid;
 
 		if ($item = NewsfeedsHelperRoute::_findItem($needles)) {
 			$link .= '&Itemid='.$item;
@@ -77,31 +97,33 @@ abstract class NewsfeedsHelperRoute
 	protected static function _findItem($needles)
 	{
 		// Prepare the reverse lookup array.
-		if (self::$lookup === null)
-		{
+		if (self::$lookup === null) {
 			self::$lookup = array();
 
 			$component	= JComponentHelper::getComponent('com_newsfeeds');
-			$menus		= JApplication::getMenu('site');
+			$app		= JFactory::getApplication();
+			$menus		= $app->getMenu('site');
 			$items		= $menus->getItems('component_id', $component->id);
+
 			foreach ($items as $item)
 			{
-				if (isset($item->query) && isset($item->query['view']))
-				{
+				if (isset($item->query) && isset($item->query['view'])) {
 					$view = $item->query['view'];
+
 					if (!isset(self::$lookup[$view])) {
 						self::$lookup[$view] = array();
 					}
+
 					if (isset($item->query['id'])) {
 						self::$lookup[$view][$item->query['id']] = $item->id;
 					}
 				}
 			}
 		}
+
 		foreach ($needles as $view => $ids)
 		{
-			if (isset(self::$lookup[$view]))
-			{
+			if (isset(self::$lookup[$view])) {
 				foreach($ids as $id)
 				{
 					if (isset(self::$lookup[$view][(int)$id])) {
